--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ a {
 }
 
 .card {
-    background-color: white;
     border-radius: 20px;
+    background-color: white;
     padding: 5px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
     display: flex;
@@ -194,44 +194,6 @@ a {
 .populaires-cards .card-rating {
     margin-bottom: 5px;
 }
-
-/* Le code ci-dessous correspond à la version responsive uniquement */
-
-/****** Media queries ***********/
-/* Medium devices (tablets, less/equal than 1024px) */
-@media (max-width: 1024px) {
-    .hebergements-and-populaires {
-        flex-direction: column;
-    }
-
-    .populaires {
-        width: 100%;
-        margin-top: 50px;
-    }
-
-    .populaires-cards {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-    .populaires-cards a {
-        width: 30%;
-    }
-
-    .populaires-cards .card-title {
-        font-size: 14px;
-    }
-
-    .populaires-cards .card-subtitle {
-        font-size: 13px;
-    }
-}
-
-/* Small devices (phones, less than 768px) */
-@media (max-width: 767.98px) {
-    /* ... */
-}
 .logo {
     width: 60px;
     height: 20px;
@@ -253,6 +215,7 @@ a {
 .nav-links :hover {
     color: var(--main-color);
     border-top: var(--main-color) solid 2px;
+    margin-top: -7px;
 
 }
 .search-bar {
@@ -286,30 +249,10 @@ a {
     background-color: #0065FC; 
     color: white;
     border: none;
-    border-radius: 10px;
     padding: 11px 25px;
     font-weight: bold;
 }
-.activity {
-    display: flex;
- }
-.card-activity {
-    flex-direction: row;
 
-} 
-.card-activity img {
-  object-fit: cover;
-  max-width: 20%;
-  display: flex;
-  height: 100%;  
-    border-radius: 20px;
-  } 
-.activity-section {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin-top: 50px;
-}  
 .footer {
     background-color: var(--main-bg-color);
     padding: 20px;
@@ -319,6 +262,7 @@ a {
     align-items: start;
     gap: 50px;
     justify-content: space-between;
+
 }
 .filtre {
     display: flex; 
@@ -346,5 +290,269 @@ a {
 .icon-filtre:hover {
     background-color: var(--filter-bg-color);  
      } 
-   
-   
+.header-top {
+    display: flex;
+    align-items: center;
+}
+.header-image {
+    flex : 1;
+}   
+
+.footer-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    width: 100%;
+    margin-right: 270px;
+    max-width: 1200px;
+}
+.activity {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    margin: 20px 0;
+}
+
+.activity-card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 80px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.activity-card-container a {
+    max-width: 250px;
+    width: 250px;
+}
+
+.activity-card-container a article {
+    width: 120%;
+}
+
+.activity-card {
+    width: 100%;
+    padding: 5px;
+    background-color: white;
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    box-sizing: border-box;
+}
+
+.activity-card-image {
+    width: 100%;
+    height: 400px;
+}
+
+.activity-card-description {
+    padding: 10px;
+    border: white 1px solid;
+    border-radius: 0 0 20px 20px;
+    background-color: white;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+
+}
+
+.activity-card-image img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+}
+
+.activity-card-description .card-title {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    font-weight: bold;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+.card-content a .card-rating {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-bottom: 5px;
+}
+
+/* Le code ci-dessous correspond à la version responsive uniquement */
+
+/****** Media queries ***********/
+/* Medium devices (tablets, less/equal than 1024px) */
+@media all and (min-width: 768px ) and (max-width: 1024px) {
+    .header {
+        max-width: 1024px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
+    .hebergements-and-populaires {
+        flex-direction: column;
+        display: flex;
+        justify-content: space-between;
+    }
+    .hebergements  {
+        max-width: 1024px;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .populaires  {
+        max-width: 1024px;
+        width: 100%;
+        margin-top: 40px;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .populaires-cards {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 30px;
+        margin-top: 0px;
+    }
+    .activity {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 20px;
+        gap: 20px 20px;
+    }
+    .populaires-cards a {
+        width: 30%;
+    }
+
+    .populaires-cards .card-title {
+        font-size: 14px;
+    }
+
+    .populaires-cards .card-subtitle {
+        font-size: 13px;
+    }
+
+.activity-card-container .activity-card {
+    width: 210px;
+    height: 270px;
+    
+}
+.activity-card-container {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.activity-card-image img {
+    height: 210px;
+        
+}
+.footer {
+    display: flex;
+    flex-direction: column;
+    margin: 90px 0 0 0;
+    gap: 20px;
+}
+.activity-card-description {
+    padding: 10px;
+    border: white 1px solid;
+    border-radius: 0 0 20px 20px;
+    background-color: white;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+
+}
+}
+/* Small devices (phones, less than 768px) */
+@media all and (min-width:320px) and (max-width: 767.98px) {
+    .header {
+        max-width: 768px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        }
+    .filtre {
+        flex-wrap: wrap;
+        display: flex;
+        gap: 10px;
+        max-width: 300px;
+    }    
+    .hebergements-and-populaires {
+        flex-direction: column;
+        display: flex;
+        justify-content: space-between;
+    }
+    .hebergements  {
+        max-width: 768px;
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .populaires  {
+        max-width: 768px;
+        width: 100%;
+        margin-top: 40px;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .populaires-cards {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 30px;
+        margin-top: 0px;
+    }
+    .activity {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 20px;
+        gap: 20px 20px;
+    }
+    .populaires-cards a {
+        width: 30%;
+    }
+
+    .populaires-cards .card-title {
+        font-size: 14px;
+    }
+
+    .populaires-cards .card-subtitle {
+        font-size: 13px;
+    }
+
+.activity-card-container .activity-card {
+    width: 210px;
+    height: 270px;
+    
+}
+.activity-card-container {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    width: 100%;
+    margin-bottom: 30px;
+}
+.activity-card-image img {
+    height: 210px;
+        
+}
+.footer {
+    display: flex;
+    flex-direction: column;
+    margin: 90px 0 0 0;
+    gap: 20px;
+}
+.activity-card-description {
+    padding: 10px;
+    border: white 1px solid;
+    border-radius: 0 0 20px 20px;
+    background-color: white;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    text-align: center;
+
+}
+    
+    
+}
