--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 body {
     display: flex;
     justify-content: center;
+    margin: 0;
 }
 
 .main-container {
@@ -95,8 +96,8 @@ a {
 }
 
 .hebergements-card-container a {
-    max-width: 250px;
-    width: 250px;
+  flex: 1 1 calc(33% - 20px); 
+  max-width: 300px;          
 }
 
 .hebergements-card-container a article {
@@ -204,19 +205,19 @@ a {
     justify-content: end;
     gap: 20px;
     margin-top: -8px;
-
-
+}
+.nav-links a {
+    border-top: white solid 2px;
+    padding: 0;
 }
 .infobar {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-.nav-links :hover {
+.nav-links a:hover {
     color: var(--main-color);
     border-top: var(--main-color) solid 2px;
-    margin-top: -7px;
-
 }
 .search-bar {
     display: flex;
@@ -321,11 +322,14 @@ a {
     gap: 80px;
     width: 100%;
     margin-bottom: 30px;
+    
 }
 
 .activity-card-container a {
-    max-width: 250px;
+    max-width: 100%;
     width: 250px;
+    flex: 1 1 calc(15% - 20px); 
+    max-width: 250px;   
 }
 
 .activity-card-container a article {
@@ -381,7 +385,7 @@ a {
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
-@media all and (min-width: 768px ) and (max-width: 1024px) {
+@media all and (max-width: 1024px) {
     .header {
         max-width: 1024px;
         display: flex;
@@ -435,11 +439,13 @@ a {
 .activity-card-container .activity-card {
     width: 210px;
     height: 270px;
+    flex: 1 1 calc(25% - 20px);
     
 }
 .activity-card-container {
     display: flex;
     flex-wrap: nowrap;
+     flex: 1 1 calc(25% - 20px);
     gap: 20px;
     width: 100%;
     margin-bottom: 30px;
@@ -481,7 +487,7 @@ a {
 }
 }
 /* Small devices (phones, less than 768px) */
-@media all and (min-width:320px) and (max-width: 767.98px) {
+@media all and (max-width: 767.98px) {
 body, html, main {
     margin: 0;
     padding: 0;
