mise ajour projet

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ a {
 }
 
 .hebergements-card-container a {
-  flex: 1 1 calc(33% - 20px); 
+  flex: 1 1 calc(33% - 22px); 
   max-width: 300px;          
 }
 
@@ -319,21 +319,19 @@ a {
 .activity-card-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 80px;
+    gap: 22px;
     width: 100%;
     margin-bottom: 30px;
     
 }
 
 .activity-card-container a {
-    max-width: 100%;
-    width: 250px;
-    flex: 1 1 calc(15% - 20px); 
-    max-width: 250px;   
+
+    width:calc(25% - 22px); 
 }
 
 .activity-card-container a article {
-    width: 120%;
+    width: 100%;
 }
 
 .activity-card {
@@ -380,6 +378,21 @@ a {
     margin-block-end: 0;
     padding-bottom: 5px;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
@@ -486,6 +499,21 @@ a {
   min-width: 20%;
 }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Small devices (phones, less than 768px) */
 @media all and (max-width: 767.98px) {
 body, html, main {
@@ -493,6 +521,10 @@ body, html, main {
     padding: 0;
     width: 100%;
 }    
+section {
+    
+    max-width: 100%;
+}
    .main-container { 
     padding: 0 0px;
     width: 100%;
@@ -507,7 +539,7 @@ body, html, main {
         width: 100%;
         }
 .logo {
-    width: 51px;
+    width: 100%;
     height: 19px;
 }        
 .header-booki {
@@ -516,8 +548,7 @@ body, html, main {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    min-width: 375px;
-    max-width: 768px;
+    width: 100%;
 }        
 .header-top {
     display: flex;
@@ -526,36 +557,33 @@ body, html, main {
     margin-top: 20px;
 }
 .nav-icons {
-    display: flex;            /* active Flexbox */
-    flex-direction: column;   /* empile h1 et p verticalement */
-    align-items: flex-start;      /* centre horizontalement les enfants */
-    text-align: start;      /* centre le texte à l’intérieur du h1 et p */
-    padding: 20px;
-}
-.nav-icons h1 {
-    font-size: 24px; /* ou la taille que tu veux */
-    margin: 0; /* supprime les marges par défaut */
+    display: flex;            
+    flex-direction: column;   
+    align-items: flex-start;     
+    text-align: start;     
+    padding: 10px;
+    margin: 10px;
+    font-size: 12px;
 }
 .nav-icons p {
-    font-size: 16px; /* ou la taille que tu veux */
-    margin: 0; /* supprime les marges par défaut */
+    margin-top: -10px;
+    font-size: 16px;
 }
-
-
 .header-image {
     margin-bottom: 40px;
     margin: 0%;
+    padding: 10px;
 
 }
 .nav-links {
     margin-top: 20px;
-    min-width: 375px;
+    width: 100%;
     border-bottom: #F2F2F2 solid 2px;
 
 }
 .nav-links a {
-    min-width: 44%;
-    margin: 9px 0;
+    width: 100%;
+
 
 }
 .nav-links :hover {
@@ -581,7 +609,7 @@ body, html, main {
   align-items: center;
   gap: 8px;
   padding: 8px 5px;
-  min-width: 40%;
+  min-width: 44%;
  
 }
 
@@ -593,7 +621,14 @@ body, html, main {
 .icon-filtre p {
   margin: 0;
 }
-
+.infobar {
+    margin: 10px;
+    gap: 20px;
+    
+}
+.infobar img {
+content: url(../images/filtres/i-filtre-smart.png);
+}
 
 .search2 {
         font-size: 0;
@@ -620,8 +655,7 @@ body, html, main {
     display: flex;
 }
 .searchping-container {
-    min-width: auto;
-    min-height: auto;
+    width: 10%;
 }
 .search1 {
     width: 100%;
@@ -636,6 +670,13 @@ body, html, main {
     max-width: 100%; 
     
 }
+.hebergements-and-populaires section {
+    width: 100%;
+    box-sizing: content-box;
+    max-width: 100%;
+    
+    
+    }
 .hebergements {
     width: 100%;
     max-width: 100%;
@@ -643,23 +684,27 @@ body, html, main {
     border-radius: 0px;
      order: 2; /* passe après populaires */
     background-color: white;
+    
 }
+
  .populaires {
-    order: 1; /* populaires en premier */
+    order: 1; 
     width: 100%;
-    max-width: 100%;
+    
     }
-.hebergements-card {
-    width: 355px;
-    height: 208px;
-   
-  }
+.hebergements-card-container a {
+    width: 100%;    
+    flex: 1 1 calc(100% - 20px);
+    align-items: center;
+    }
+
 .hebergements-card-container {
     display: flex;
     gap: 20px;
     width: 375px;
     margin-bottom: 30px;  
     margin-top: -30px;
+    
   }
 .activity {
     display: flex;
@@ -673,7 +718,7 @@ body, html, main {
     flex-wrap: wrap;
     width: 100%;
     align-items: center;
-    margin: none;
+    margin: 0;
  }
  .activity-card {
     width: 315px;
@@ -687,10 +732,10 @@ body, html, main {
     width: 294px;
 }
 .footer-container {
-        flex-direction: column; /* passe les boxes en vertical */
-        align-items: center;    /* centre les boxes horizontalement */
-        margin-right: 0;        /* supprime le margin qui gênait */
-        gap: 20px;              /* espace entre les boxes */
+        flex-direction: column; 
+        align-items: center;    
+        margin-right: 0;        
+        gap: 20px;             
     }
 
     .footer {
@@ -700,6 +745,19 @@ body, html, main {
     }
 
     .footer-box {
-        text-align: center;     /* optionnel : centre le texte */
+        text-align: center;     
     }
+.activity-card-container a {
+    width: 100%;    
+    width: calc(100% - 2px);
     }
+.populaires-cards a {
+    width: 100%;
+    height: 146px;
+    max-width: 100%;
+    
+}    
+.activity-card-image img {
+    height: 185px;
+}
+        }
