--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ a {
 
 .hebergements-card-container a {
   flex: 1 1 calc(33% - 22px); 
-  max-width: 300px;          
+           
 }
 
 .hebergements-card-container a article {
@@ -434,7 +434,6 @@ a {
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 20px;
         gap: 20px 20px;
     }
     .populaires-cards a {
@@ -450,23 +449,20 @@ a {
     }
 
 .activity-card-container .activity-card {
-    width: 210px;
-    height: 270px;
+    width: 100%;
     flex: 1 1 calc(25% - 20px);
     
 }
 .activity-card-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
      flex: 1 1 calc(25% - 20px);
     gap: 20px;
     width: 100%;
     margin-bottom: 30px;
+    justify-content: ;
 }
-.activity-card-image img {
-    height: 210px;
-        
-}
+
 .footer {
     display: flex;
     flex-direction: column;
@@ -480,7 +476,6 @@ a {
     background-color: white;
     box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     text-align: center;
-    min-width: 50px;
     min-height: 40px;
 
 }
@@ -498,6 +493,11 @@ a {
 .icon-filtre {
   min-width: 20%;
 }
+.activity-title {
+  height: auto;       
+  width: 100%;          
+  margin-bottom: 20px;  
+
 }
 
 
@@ -535,7 +535,6 @@ section {
         
         display: flex;
         flex-wrap: wrap;
-        min-width: 375px;
         width: 100%;
         }
 .logo {
@@ -555,6 +554,7 @@ section {
     flex-direction: column; 
     align-items: center; 
     margin-top: 20px;
+    width: 100%;
 }
 .nav-icons {
     display: flex;            
@@ -672,7 +672,6 @@ content: url(../images/filtres/i-filtre-smart.png);
 }
 .hebergements-and-populaires section {
     width: 100%;
-    box-sizing: content-box;
     max-width: 100%;
     
     
@@ -682,7 +681,7 @@ content: url(../images/filtres/i-filtre-smart.png);
     max-width: 100%;
     gap: 20px;
     border-radius: 0px;
-     order: 2; /* passe après populaires */
+     order: 2; 
     background-color: white;
     
 }
@@ -701,7 +700,6 @@ content: url(../images/filtres/i-filtre-smart.png);
 .hebergements-card-container {
     display: flex;
     gap: 20px;
-    width: 375px;
     margin-bottom: 30px;  
     margin-top: -30px;
     
@@ -711,7 +709,8 @@ content: url(../images/filtres/i-filtre-smart.png);
     flex-direction: column;
     flex-wrap: wrap;
     width: 100%;
-    margin: 30px;
+    padding: 20px;
+    box-sizing: border-box;
  }
 .activity-card-container {
     display: flex;
@@ -725,15 +724,12 @@ content: url(../images/filtres/i-filtre-smart.png);
     height: 200px;
      }
 .activity-card-image {
-    width: 315px;
+    
     height: 141px;
  }
-.activity-card-description {
-    width: 294px;
-}
+
 .footer-container {
-        flex-direction: column; 
-        align-items: center;    
+        flex-direction: column;   
         margin-right: 0;        
         gap: 20px;             
     }
@@ -744,20 +740,29 @@ content: url(../images/filtres/i-filtre-smart.png);
         gap: 20px;
     }
 
-    .footer-box {
-        text-align: center;     
-    }
 .activity-card-container a {
     width: 100%;    
     width: calc(100% - 2px);
     }
 .populaires-cards a {
     width: 100%;
-    height: 146px;
     max-width: 100%;
     
 }    
+.header-top nav { 
+    width: 100%;
+    
+}
 .activity-card-image img {
     height: 185px;
 }
+.hebergements-card {
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    }
+.hebergements-and-populaires .hebergements {
+    background-color: white;
+     }
+.hebergements-and-populaires .populaires {
+border-radius: 0px;
         }
+           }
